--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ add_custom_command(TARGET copy-resources
 add_subdirectory(utils)
 add_subdirectory(day1)
 add_subdirectory(day2)
+add_subdirectory(day3)
